[package]
name = "kvasir"
version = "0.3.1"
authors = ["Andrew James <andrew.james@credera.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
glob = "0.3.0"
walkdir = "2"
itertools = "0.10.0"
log = "0.4.14"
env_logger = "0.8.3"
path-clean = "0.1.0"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
error-chain = "0.12.4"
serde_yaml = "0.8"
java-properties = "1.3.0"
openapiv3 = "0.5.0"
toml = "0.5"
serde_ini = "0.2.0"
serde-xml-rs = "0.4.1"
once_cell = "1.7.2"
hocon = { version = "0.5.2", features = ["serde-support"], default-features = false }
tera = { version = "1" }
jsonpath_lib = "0.2.6"
sqlparser = {version = "0.9.0", features = ["serde"] }
