[package]
name = "kvasir"
version = "0.3.6"
authors = ["Andrew James <andrew.james@credera.co.uk>"]
edition = "2021"
readme = "README.md"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
glob = "0.3.0"
walkdir = "2"
itertools = "0.10.0"
log = "0.4.14"
env_logger = "0.8.3"
path-clean = "0.1.0"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
error-chain = "0.12.4"
serde_yaml = "0.8"
java-properties = "1.3.0"
openapiv3 = "0.5.0"
toml = "0.5"
serde_ini = "0.2.0"
serde-xml-rs = "0.4.1"
once_cell = "1.7.2"
hocon = { version = "0.5.2", features = ["serde-support"], default-features = false }
tera = { version = "1" }
jsonpath_lib = "0.2.6"
sqlparser = {version = "0.9.0", features = ["serde"] }

[profile.release]
opt-level = 3 # Default optimisation level (set to 'z' to optimise for size)
lto = true # Enable link-time optimisations
codegen-units = 1 # Reduce parallelisation to increase opportunities to reduce size
strip = true # Strip binaries of symbols

[package.metadata.release]
allow-branch = ["main"]
push = false
publish = false
pre-release-commit-message = "release: {{prev_version}} → {{version}}"
tag-message = "release: {{crate_name}} version {{version}}"
pre-release-replacements = [
  {file="README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}"} ,
]
